ozone: Use the right thread for BinderRegistry.

In single-process mode, it is necessary to make sure that the
DeviceCursor is initialized on the gpu thread, as opposed to
the ui thread. Otherwise, we end up using gpu-thread specific
objects (e.g. |OzonePlatformGbm::pending_cursor_requests_|,
|OzonePlatformGbm::drm_thread_proxy_|) from both the gpu and
ui threads.

BUG=717257

Review-Url: https://codereview.chromium.org/2870653002
Cr-Commit-Position: refs/heads/master@{#470056}

Former-commit-id: 2fc984150a60b860103aa4d2f67d9c1686d340da